Fix: Unreadable icons in dark mode

--- a/src/scss/ui/_annotations.scss
+++ b/src/scss/ui/_annotations.scss
@@ -38,6 +38,8 @@
       font-family: var(--content-font);
       vertical-align: top;
 
+      font-weight: bold;
+      color: var(--ui-c-text);
       background: var(--ui-c-bg);
       box-shadow: var(--ui-box-shadow);
       border-radius: var(--border-radius);
